--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -5,14 +5,14 @@ anchor_version = "0.30.1"
 resolution = true
 skip-lint = false
 
-[programs.localnet]
-davedapp = "coUnmi3oBUtwtd9fjeAvSsJssXh5A5xyPbhpewyzRVF"
+[programs.devnet]
+davedapp = "E4W4iSXPdmLGzoFfFX39eoV29GqdvosiqTpKTuEdRw77"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
